fix: :lipstick: fixed issues with the responsiveness
added an overflow-x: clip to the main because for some reason, even with it on the body, content was overflowing on phones causing weird layout glitches

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -419,6 +419,7 @@ header {
 }
 
 main {
+    overflow-x: clip;
     background-color: white;
 
     * {
@@ -518,6 +519,9 @@ footer {
     text-align: center;
     color: black;
     height: 10svh;
+    line-height: .8em;
+    display: grid;
+    place-items: center;
 
     :is(.name, .license) {
         position: relative;
